--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ru">
 
@@ -21,7 +20,8 @@
         <!--main navigation-->
         <nav class="container main-nav">
           <a class="logo" href="./index.html"><span class="logo-first">Web</span><span
-              class="logo-second-header">Studio</span></a>
+              class="logo-second-header">Studio</span>
+          </a>
           <ul class="site-nav list">
             <li class="item"><a href="" class="link current">Студия</a></li>
             <li class="item"><a href="./portfolio.html">Портфолио</a></li>
@@ -31,10 +31,18 @@
         <!--contact information-->
         <ul class="container contacts list">
           <li class="contact-info">
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="address-link" href="mailto:info@devstudio.com">
+              <svg class="address-icon">
+                <use href="./images/icons/sprite.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com</a>
           </li>
           <li class="contact-info">
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="address-link" href="tel:+380961111111">
+              <svg class="address-icon-2">
+                <use href="./images/icons/sprite.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11</a>
           </li>
         </ul>
       </div>
@@ -47,9 +55,7 @@
         Эффективные решения <br />
         для вашего бизнеса
       </h1>
-      <button type="button" class="button primary">
-        Заказать услугу
-      </button>
+      <button type="button" class="button primary">Заказать услугу</button>
     </section>
     <!--necessary skills-->
     <section class="section">
@@ -57,6 +63,13 @@
         <h2 class="section-title visually-hidden">Необходимые навыки</h2>
         <ul class="skills list">
           <li class="skills-item">
+            <div class="skills-item-img">
+              <a href="" class="" target="_blank" rel="noopener noreferrer">
+                <svg class="skills-item-svg" width="70" height="70">
+                  <use href="./images/icons/sprite.svg#icon-antenna"></use>
+                </svg>
+              </a>
+            </div>
             <h3 class="title">Внимание к деталям</h3>
             <p class="necessary-skills">
               Идейные соображения, а также начало повседневной работы по
@@ -64,6 +77,13 @@
             </p>
           </li>
           <li class="skills-item">
+            <div class="skills-item-img">
+              <a href="" class="" target="_blank" rel="noopener noreferrer">
+                <svg class="skills-item-svg" width="70" height="70">
+                  <use href="./images/icons/sprite.svg#icon-clock"></use>
+                </svg>
+              </a>
+            </div>
             <h3 class="title">Пунктуальность</h3>
             <p class="necessary-skills">
               Задача организации, в особенности же рамки и место обучения
@@ -71,6 +91,13 @@
             </p>
           </li>
           <li class="skills-item">
+            <div class="skills-item-img">
+              <a href="" class="" target="_blank" rel="noopener noreferrer">
+                <svg class="skills-item-svg" width="70" height="70">
+                  <use href="./images/icons/sprite.svg#icon-diagram"></use>
+                </svg>
+              </a>
+            </div>
             <h3 class="title">Планирование</h3>
             <p class="necessary-skills">
               Равным образом консультация с широким активом в значительной
@@ -78,6 +105,13 @@
             </p>
           </li>
           <li class="skills-item">
+            <div class="skills-item-img">
+              <a href="" class="" target="_blank" rel="noopener noreferrer">
+                <svg class="skills-item-svg" width="70" height="70">
+                  <use href="./images/icons/sprite.svg#icon-astronaut"></use>
+                </svg>
+              </a>
+            </div>
             <h3 class="title">Современные технологии</h3>
             <p class="necessary-skills">
               Значимость этих проблем настолько очевидна, что реализация
@@ -85,6 +119,7 @@
             </p>
           </li>
         </ul>
+      </div>
     </section>
     <!--main employments-->
     <section class="section-employments">
@@ -92,13 +127,13 @@
         <h2 class="section-title">Чем мы занимаемся</h2>
         <ul class="employments list">
           <li class="employments-item">
-            <img src="./image/studia/photo1.img.jpg" alt="Иллюстрация верстки" width="370" />
+            <img src="./images/main-page/box-1.jpg" alt="Иллюстрация верстки" width="370" />
           </li>
           <li class="employments-item">
-            <img src="./image/studia/photo2.img.jpg" alt="Иллюстрация мобильного приложения" width="370" />
+            <img src="./images/main-page/box-2.jpg" alt="Иллюстрация мобильного приложения" width="370" />
           </li>
           <li class="employments-item">
-            <img src="./image/studia/photo3.img.jpg" alt="Иллюстрация применения стилей" width="370" />
+            <img src="./images/main-page/box-3.jpg" alt="Иллюстрация применения стилей" width="370" />
           </li>
         </ul>
       </div>
@@ -109,58 +144,261 @@
         <h2 class="section-title">Наша команда</h2>
         <ul class="team list">
           <li class="team-item">
-            <img src="./image/studia/photo4.img.jpg" alt="" width="270" />
+            <img src="./images/main-page/img.jpg" alt="" width="270" />
             <div class="team-text">
               <h3 class="list-title">Игорь Демьяненко</h3>
               <p class="team-about">Product Designer</p>
+              <ul class="social-icons list">
+                <li class="social-icons-item">
+                  <a href="" class="social-icons-link" target="_blank" rel="noopener noreferrer">
+                    <svg class="social-icons-svg">
+                      <use href="./images/icons/sprite.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-icons-item">
+                  <a href="" class="social-icons-link" target="_blank" rel="noopener noreferrer">
+                    <svg class="social-icons-svg">
+                      <use href="./images/icons/sprite.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-icons-item">
+                  <a href="" class="social-icons-link" target="_blank" rel="noopener noreferrer">
+                    <svg class="social-icons-svg">
+                      <use href="./images/icons/sprite.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-icons-item">
+                  <a href="" class="social-icons-link" target="_blank" rel="noopener noreferrer">
+                    <svg class="social-icons-svg">
+                      <use href="./images/icons/sprite.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </div>
           </li>
           <li class="team-item">
-            <img src="./image/studia/photo5.img.jpg" alt="" width="270" />
+            <img src="./images/main-page/img-2.jpg" alt="" width="270" />
             <div class="team-text">
               <h3 class="list-title">Ольга Репина</h3>
               <p class="team-about">Frontend Developer</p>
+              <ul class="social-icons list">
+                <li class="social-icons-item">
+                  <a href="" class="social-icons-link" target="_blank" rel="noopener noreferrer">
+                    <svg class="social-icons-svg">
+                      <use href="./images/icons/sprite.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-icons-item">
+                  <a href="" class="social-icons-link" target="_blank" rel="noopener noreferrer">
+                    <svg class="social-icons-svg">
+                      <use href="./images/icons/sprite.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-icons-item">
+                  <a href="" class="social-icons-link" target="_blank" rel="noopener noreferrer">
+                    <svg class="social-icons-svg">
+                      <use href="./images/icons/sprite.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-icons-item">
+                  <a href="" class="social-icons-link" target="_blank" rel="noopener noreferrer">
+                    <svg class="social-icons-svg">
+                      <use href="./images/icons/sprite.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </div>
           </li>
           <li class="team-item">
-            <img src="./image/studia/photo6.img.jpg" alt="" width="270" />
+            <img src="./images/main-page/img-3.jpg" alt="" width="270" />
             <div class="team-text">
               <h3 class="list-title">Николай Тарасов</h3>
               <p class="team-about">Marketing</p>
+              <ul class="social-icons list">
+                <li class="social-icons-item">
+                  <a href="" class="social-icons-link" target="_blank" rel="noopener noreferrer">
+                    <svg class="social-icons-svg">
+                      <use href="./images/icons/sprite.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-icons-item">
+                  <a href="" class="social-icons-link" target="_blank" rel="noopener noreferrer">
+                    <svg class="social-icons-svg">
+                      <use href="./images/icons/sprite.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-icons-item">
+                  <a href="" class="social-icons-link" target="_blank" rel="noopener noreferrer">
+                    <svg class="social-icons-svg">
+                      <use href="./images/icons/sprite.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-icons-item">
+                  <a href="" class="social-icons-link" target="_blank" rel="noopener noreferrer">
+                    <svg class="social-icons-svg">
+                      <use href="./images/icons/sprite.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </div>
           </li>
           <li class="team-item">
-            <img src="./image/studia/photo7.img.jpg" alt="" width="270" />
+            <img src="./images/main-page/img-4.jpg" alt="" width="270" />
             <div class="team-text">
               <h3 class="list-title">Михаил Ермаков</h3>
               <p class="team-about">UI Designer</p>
+              <ul class="social-icons list">
+                <li class="social-icons-item">
+                  <a href="" class="social-icons-link" target="_blank" rel="noopener noreferrer">
+                    <svg class="social-icons-svg">
+                      <use href="./images/icons/sprite.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-icons-item">
+                  <a href="" class="social-icons-link" target="_blank" rel="noopener noreferrer">
+                    <svg class="social-icons-svg">
+                      <use href="./images/icons/sprite.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-icons-item">
+                  <a href="" class="social-icons-link" target="_blank" rel="noopener noreferrer">
+                    <svg class="social-icons-svg">
+                      <use href="./images/icons/sprite.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-icons-item">
+                  <a href="" class="social-icons-link" target="_blank" rel="noopener noreferrer">
+                    <svg class="social-icons-svg">
+                      <use href="./images/icons/sprite.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </div>
           </li>
         </ul>
       </div>
       <!---->
     </section>
-    </div>
-  </main>
-  <footer class="footer-line">
-    <div class="footer">
-      <a class="logo" href="./index.html"><span class="logo-first">Web</span><span
-          class="logo-second-footer">Studio</span></a>
-      <!--contacts-->
-      <address class="address">
-        <p class="address-text">г. Киев, пр-т Леси Украинки, 26</p>
-        <ul class="list address-item">
-          <li class="address-item">
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+    <!--our clients-->
+    <section class="section">
+      <div class="container">
+        <h2 class="section-title">Постоянные клиенты</h2>
+        <ul class="our-clients list">
+          <li class="our-clients-item">
+            <a href="" class="our-clients-position">
+              <svg class="our-clients-svg">
+                <use href="./images/icons/sprite.svg#icon-Logo"></use>
+              </svg>
+            </a>
           </li>
-          <li class="address-item">
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
+          <li class="our-clients-item">
+            <a href="" class="our-clients-position">
+              <svg class="our-clients-svg">
+                <use href="./images/icons/sprite.svg#icon-Logo-2"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="our-clients-item">
+            <a href="" class="our-clients-position">
+              <svg class="our-clients-svg">
+                <use href="./images/icons/sprite.svg#icon-Logo-3"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="our-clients-item">
+            <a href="" class="our-clients-position">
+              <svg class="our-clients-svg">
+                <use href="./images/icons/sprite.svg#icon-Logo-4"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="our-clients-item">
+            <a href="" class="our-clients-position">
+              <svg class="our-clients-svg">
+                <use href="./images/icons/sprite.svg#icon-Logo-5"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="our-clients-item">
+            <a href="" class="our-clients-position">
+              <svg class="our-clients-svg">
+                <use href="./images/icons/sprite.svg#icon-Logo-6"></use>
+              </svg>
+            </a>
           </li>
         </ul>
-      </address>
+      </div>
+    </section>
+  </main>
+  <footer class="footer">
+    <div class="footer-line">
+      <div class="footer-address">
+        <a class="footer-logo" href="./index.html"><span class="logo-first">Web</span><span
+            class="logo-second-footer">Studio</span></a>
+        <!--contacts-->
+        <address class="address">
+          <p class="address-text">г. Киев, пр-т Леси Украинки, 26</p>
+          <ul class="list address-item">
+            <li class="address-item">
+              <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li class="address-item">
+              <a href="tel:+380961111111">+38 096 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
+      <div class="footer-social-icons">
+        <h3 class="title-icons">ПРИСОЕДИНЯЙТЕСЬ</h3>
+        <ul class="social-icons list">
+          <li class="social-icons-item">
+            <a href="" class="footer-social-icons-link" target="_blank" rel="noopener noreferrer">
+              <svg class="footer-social-icons-svg">
+                <use href="./images/icons/sprite.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-icons-item">
+            <a href="" class="footer-social-icons-link" target="_blank" rel="noopener noreferrer">
+              <svg class="footer-social-icons-svg">
+                <use href="./images/icons/sprite.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-icons-item">
+            <a href="" class="footer-social-icons-link" target="_blank" rel="noopener noreferrer">
+              <svg class="footer-social-icons-svg">
+                <use href="./images/icons/sprite.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-icons-item">
+            <a href="" class="footer-social-icons-link" target="_blank" rel="noopener noreferrer">
+              <svg class="footer-social-icons-svg">
+                <use href="./images/icons/sprite.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
     </div>
   </footer>
-  </div>
 </body>
 
 </html>
