--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <li class="contact-info">
             <a class="address-link" href="mailto:info@devstudio.com">
               <svg class="address-icon">
-                <use href="./images/icons/sprite.svg#icon-envelope"></use>
+                <use href="./images/p"></use>
               </svg>
               info@devstudio.com</a>
           </li>
@@ -127,13 +127,13 @@
         <h2 class="section-title">Чем мы занимаемся</h2>
         <ul class="employments list">
           <li class="employments-item">
-            <img src="./images/main-page/box-1.jpg" alt="Иллюстрация верстки" width="370" />
+            <img src="./image/studia/photo1.img.jpg" alt="Иллюстрация верстки" width="370" />
           </li>
           <li class="employments-item">
-            <img src="./images/main-page/box-2.jpg" alt="Иллюстрация мобильного приложения" width="370" />
+            <img src="./image/studia/photo2.img.jpg" alt="Иллюстрация мобильного приложения" width="370" />
           </li>
           <li class="employments-item">
-            <img src="./images/main-page/box-3.jpg" alt="Иллюстрация применения стилей" width="370" />
+            <img src="./image/studia/photo3.img.jpg" alt="Иллюстрация применения стилей" width="370" />
           </li>
         </ul>
       </div>
@@ -144,7 +144,7 @@
         <h2 class="section-title">Наша команда</h2>
         <ul class="team list">
           <li class="team-item">
-            <img src="./images/main-page/img.jpg" alt="" width="270" />
+            <img src="./image/studia/photo4.img.jpg" alt="" width="270" />
             <div class="team-text">
               <h3 class="list-title">Игорь Демьяненко</h3>
               <p class="team-about">Product Designer</p>
@@ -181,7 +181,7 @@
             </div>
           </li>
           <li class="team-item">
-            <img src="./images/main-page/img-2.jpg" alt="" width="270" />
+            <img src="./image/studia/photo5.img.jpg" alt="" width="270" />
             <div class="team-text">
               <h3 class="list-title">Ольга Репина</h3>
               <p class="team-about">Frontend Developer</p>
@@ -218,7 +218,7 @@
             </div>
           </li>
           <li class="team-item">
-            <img src="./images/main-page/img-3.jpg" alt="" width="270" />
+            <img src="./image/studia/photo6.img.jpg" alt="" width="270" />
             <div class="team-text">
               <h3 class="list-title">Николай Тарасов</h3>
               <p class="team-about">Marketing</p>
@@ -255,7 +255,7 @@
             </div>
           </li>
           <li class="team-item">
-            <img src="./images/main-page/img-4.jpg" alt="" width="270" />
+            <img src="./image/studia/photo7.img.jpg" alt="" width="270" />
             <div class="team-text">
               <h3 class="list-title">Михаил Ермаков</h3>
               <p class="team-about">UI Designer</p>
