--- a/portfolio.html
+++ b/portfolio.html
@@ -77,7 +77,7 @@
               <article class="cards-item">
                 <a href="" class="cards-link">
                   <div class="cards-img">
-                    <img src="./images/portfolio/img.jpg" alt="фото веб-сайта" width="370" />
+                    <img src="./image/portfolio/img1.jpg" alt="фото веб-сайта" width="370" />
                     <div class="box">
                       <h3 class="list-title-portfolio">Технокряк</h3>
                       <p class="portfolio-about">Веб-сайт</p>
@@ -90,7 +90,7 @@
               <article class="cards-item">
                 <a href="" class="cards-link">
                   <div class="cards-img">
-                    <img src="./images/portfolio/img-2.jpg" alt="два баскетболиста" width="370" />
+                    <img src="./image/portfolio/img2.jpg" alt="два баскетболиста" width="370" />
                     <div class="box">
                       <h3 class="list-title-portfolio">
                         Постер New Orlean vs Golden Star
@@ -105,7 +105,7 @@
               <article class="cards-item">
                 <a href="" class="cards-link">
                   <div class="cards-img">
-                    <img src="./images/portfolio/img-3.jpg" alt="логотип ресторана" width="370" />
+                    <img src="./image/portfolio/img3.jpg" alt="логотип ресторана" width="370" />
                     <div class="box">
                       <h3 class="list-title-portfolio">Ресторан Seafood</h3>
                       <p class="portfolio-about">Приложение</p>
@@ -118,7 +118,7 @@
               <article class="cards-item">
                 <a href="" class="cards-link">
                   <div class="cards-img">
-                    <img src="./images/portfolio/img-4.jpg" alt="наушники" width="370" />
+                    <img src="./image/portfolio/img4.jpg" alt="наушники" width="370" />
                     <div class="box">
                       <h3 class="list-title-portfolio">Проект Prime</h3>
                       <p class="portfolio-about">Маркетинг</p>
@@ -131,7 +131,7 @@
               <article class="cards-item">
                 <a href="" class="cards-link">
                   <div class="cards-img">
-                    <img src="./images/portfolio/img-5.jpg" alt="две коробки" width="370" />
+                    <img src="./image/portfolio/img5.jpg" alt="две коробки" width="370" />
                     <div class="box">
                       <h3 class="list-title-portfolio">Проект Boxes</h3>
                       <p class="portfolio-about">Приложение</p>
@@ -144,7 +144,7 @@
               <article class="cards-item">
                 <a href="" class="cards-link">
                   <div class="cards-img">
-                    <img src="./images/portfolio/img-6.jpg" alt="монитор" width="370" />
+                    <img src="./image/portfolio/img6.jpg" alt="монитор" width="370" />
                     <div class="box">
                       <h3 class="list-title-portfolio">
                         Inspiration has no Borders
@@ -159,7 +159,7 @@
               <article class="cards-item">
                 <a href="" class="cards-link">
                   <div class="cards-img">
-                    <img src="./images/portfolio/img-7.jpg" alt="рзворот книги" width="370" />
+                    <img src="./image/portfolio/img7.jpg" alt="рзворот книги" width="370" />
                     <div class="box">
                       <h3 class="list-title-portfolio">
                         Издание Limited Edition
@@ -174,7 +174,7 @@
               <article class="cards-item">
                 <a href="" class="cards-link">
                   <div class="cards-img">
-                    <img src="./images/portfolio/img-8.jpg" alt="лейбл" width="370" />
+                    <img src="./image/portfolio/img8.jpg" alt="лейбл" width="370" />
                     <div class="box">
                       <h3 class="list-title-portfolio">Проект LAB</h3>
                       <p class="portfolio-about">Маркетинг</p>
@@ -187,7 +187,7 @@
               <article class="cards-item">
                 <a href="" class="cards-link">
                   <div class="cards-img">
-                    <img src="./images/portfolio/img-9.jpg" alt="человек, работающий за ноутбуком" width="370" />
+                    <img src="./image/portfolio/img9.jpg" alt="человек, работающий за ноутбуком" width="370" />
                     <div class="box">
                       <h3 class="list-title-portfolio">Growing Business</h3>
                       <p class="portfolio-about">Приложение</p>
