--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="skills-item-img">
               <a href="" class="" target="_blank" rel="noopener noreferrer">
                 <svg class="skills-item-svg" width="70" height="70">
-                  <use href="./images/icons/sprite.svg#icon-antenna"></use>
+                  <use href="./images/photo-icons/sprite.svg#icon-antenna"></use>
                 </svg>
               </a>
             </div>
