--- a/index.html
+++ b/index.html
@@ -303,42 +303,42 @@
           <li class="our-clients-item">
             <a href="" class="our-clients-position">
               <svg class="our-clients-svg">
-                <use href="./image/photo-icons/sprite.svg#icon-Logo"></use>
+                <use href="./image/photo-icons/sprite.svg#icon-logo1.1"></use>
               </svg>
             </a>
           </li>
           <li class="our-clients-item">
             <a href="" class="our-clients-position">
               <svg class="our-clients-svg">
-                <use href="./image/photo-icons/sprite.svg#icon-Logo-1"></use>
+                <use href="./image/photo-icons/sprite.svg#icon-logo1"></use>
               </svg>
             </a>
           </li>
           <li class="our-clients-item">
             <a href="" class="our-clients-position">
               <svg class="our-clients-svg">
-                <use href="./image/photo-icons/sprite.svg#icon-Logo-2"></use>
+                <use href="./image/photo-icons/sprite.svg#icon-logo2"></use>
               </svg>
             </a>
           </li>
           <li class="our-clients-item">
             <a href="" class="our-clients-position">
               <svg class="our-clients-svg">
-                <use href="./image/photo-icons/sprite.svg#icon-Logo-3"></use>
+                <use href="./image/photo-icons/sprite.svg#icon-logo3"></use>
               </svg>
             </a>
           </li>
           <li class="our-clients-item">
             <a href="" class="our-clients-position">
               <svg class="our-clients-svg">
-                <use href="./image/photo-icons/sprite.svg#icon-Logo-4"></use>
+                <use href="./image/photo-icons/sprite.svg#icon-logo4"></use>
               </svg>
             </a>
           </li>
           <li class="our-clients-item">
             <a href="" class="our-clients-position">
               <svg class="our-clients-svg">
-                <use href="./image/photo-icons/sprite.svg#icon-Logo-5"></use>
+                <use href="./image/photo-icons/sprite.svg#icon-logo5"></use>
               </svg>
             </a>
           </li>
