--- a/index.html
+++ b/index.html
@@ -303,42 +303,42 @@
           <li class="our-clients-item">
             <a href="" class="our-clients-position">
               <svg class="our-clients-svg">
-                <use href="./image/photo-icons/sprite.svg#icon-logo1"></use>
+                <use href="./image/photo-icons/sprite.svg#icon-logo-file"></use>
               </svg>
             </a>
           </li>
           <li class="our-clients-item">
             <a href="" class="our-clients-position">
               <svg class="our-clients-svg">
-                <use href="./image/photo-icons/sprite.svg#icon-logo2"></use>
+                <use href="./image/photo-icons/sprite.svg#icon-logo-tour"></use>
               </svg>
             </a>
           </li>
           <li class="our-clients-item">
             <a href="" class="our-clients-position">
               <svg class="our-clients-svg">
-                <use href="./image/photo-icons/sprite.svg#icon-logo3"></use>
+                <use href="./image/photo-icons/sprite.svg#icon-logo-one"></use>
               </svg>
             </a>
           </li>
           <li class="our-clients-item">
             <a href="" class="our-clients-position">
               <svg class="our-clients-svg">
-                <use href="./image/photo-icons/sprite.svg#icon-logo4"></use>
+                <use href="./image/photo-icons/sprite.svg#icon-logo-six"></use>
               </svg>
             </a>
           </li>
           <li class="our-clients-item">
             <a href="" class="our-clients-position">
               <svg class="our-clients-svg">
-                <use href="./image/photo-icons/sprite.svg#icon-logo5"></use>
+                <use href="./image/photo-icons/sprite.svg#icon-logo-three"></use>
               </svg>
             </a>
           </li>
           <li class="our-clients-item">
             <a href="" class="our-clients-position">
               <svg class="our-clients-svg">
-                <use href="./image/photo-icons/sprite.svg#icon-logo6"></use>
+                <use href="./image/photo-icons/sprite.svg#icon-logo-two"></use>
               </svg>
             </a>
           </li>
