--- a/index.html
+++ b/index.html
@@ -303,14 +303,14 @@
           <li class="our-clients-item">
             <a href="" class="our-clients-position">
               <svg class="our-clients-svg">
-                <use href="./image/photo-icons/sprite.svg#icon-logo-file"></use>
+                <use href="./image/photo-icons/sprite.svg#icon-logo-five"></use>
               </svg>
             </a>
           </li>
           <li class="our-clients-item">
             <a href="" class="our-clients-position">
               <svg class="our-clients-svg">
-                <use href="./image/photo-icons/sprite.svg#icon-logo-tour"></use>
+                <use href="./image/photo-icons/sprite.svg#icon-logo-four"></use>
               </svg>
             </a>
           </li>
