--- a/index.html
+++ b/index.html
@@ -303,20 +303,6 @@
           <li class="our-clients-item">
             <a href="" class="our-clients-position">
               <svg class="our-clients-svg">
-                <use href="./image/photo-icons/sprite.svg#icon-logo-five"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="our-clients-item">
-            <a href="" class="our-clients-position">
-              <svg class="our-clients-svg">
-                <use href="./image/photo-icons/sprite.svg#icon-logo-four"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="our-clients-item">
-            <a href="" class="our-clients-position">
-              <svg class="our-clients-svg">
                 <use href="./image/photo-icons/sprite.svg#icon-logo-one"></use>
               </svg>
             </a>
@@ -324,7 +310,7 @@
           <li class="our-clients-item">
             <a href="" class="our-clients-position">
               <svg class="our-clients-svg">
-                <use href="./image/photo-icons/sprite.svg#icon-logo-six"></use>
+                <use href="./image/photo-icons/sprite.svg#icon-logo-two"></use>
               </svg>
             </a>
           </li>
@@ -338,7 +324,21 @@
           <li class="our-clients-item">
             <a href="" class="our-clients-position">
               <svg class="our-clients-svg">
-                <use href="./image/photo-icons/sprite.svg#icon-logo-two"></use>
+                <use href="./image/photo-icons/sprite.svg#icon-logo-four"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="our-clients-item">
+            <a href="" class="our-clients-position">
+              <svg class="our-clients-svg">
+                <use href="./image/photo-icons/sprite.svg#icon-logo-file"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="our-clients-item">
+            <a href="" class="our-clients-position">
+              <svg class="our-clients-svg">
+                <use href="./image/photo-icons/sprite.svg#icon-logo-six"></use>
               </svg>
             </a>
           </li>
